aws-fargatepoc/kubefiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fargate-poc-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: fargate-poc
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
